Get tests running from command line